appId: host.exp.exponent
---


- tapOn: "Rotina"

- scroll
- assertVisible: "Limpar janelas"
